--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html, body {
     top: 75px;
     opacity: 0;
     display: inline-block;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.26);
     margin: auto;
   }
   #mazeContainer #mazeCanvas {
@@ -35,7 +35,7 @@ html, body {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    color: rgb(255, 255, 255);
+    color: rgb(251, 247, 247);
     display: inline-block;
     font-size: 15px;
     text-align: center;
@@ -64,7 +64,7 @@ html, body {
   }
   #Message-Container {
     visibility: hidden;
-    color: white;
+    color: rgb(250, 247, 247);
     display: block;
     width: 100vw;
     height: 100vh;
@@ -74,7 +74,8 @@ html, body {
     bottom: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.30);
-    z-index: 1;
+    z-index: 3;
+    
   }
   #Message-Container #message {
     width: 300px;
@@ -91,6 +92,7 @@ html, body {
     height: auto;
     width: auto;
     margin: auto;
+    z-index: 2;
   }
   #page #menu {
     margin: auto;
@@ -119,7 +121,7 @@ html, body {
     border-radius: 5px;
   }
   #gradient {
-    z-index: -1;
+    z-index: -2;
     position: fixed;
     top: 0;
     bottom: 0;
@@ -129,10 +131,10 @@ html, body {
     background: linear-gradient(-45deg, #ffd13b, #8144c7, #ffd13b, #8144c7);
     background-size: 400% 400%;
     animation: Gradient 15s ease infinite;
-  }
-  @keyframes Gradient {
-    /* Extra small devices (phones, 600px and down) */
-    0% {
+  } 
+   @keyframes Gradient {
+    
+     0% {
       background-position: 0% 50%;
     }
     50% {
@@ -141,9 +143,127 @@ html, body {
     100% {
       background-position: 0% 50%;
     }
-  }
-  /* @media only screen and (max-width: 400px) {
+  }  
+   /* @media only screen and (max-width: 400px) {
     input, select {
       width: 120px;
     }
   } */
+
+    /* .main-area {
+    background: linear-gradient(to left, #b12ff1, #ffd23e);
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+}  */
+
+   .circles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    z-index: -1;
+  }
+
+  @keyframes animate {
+    0% {
+    opacity: 1;
+    border-radius: 0;
+    transform: translateY(0) rotate(0deg);
+    }
+    100% {
+    opacity: 0;
+    border-radius: 50%;
+    transform: translateY(-1000px) rotate(720deg);
+    }
+  }
+
+  .circles div {
+    position: absolute;
+    display: block;
+    width: 20px;
+    height: 20px;
+    background: rgba(255, 255, 255, 0.2);
+    bottom: -150px;
+    animation: animate 25s linear infinite;
+  }
+
+  .circles div:nth-child(1) {
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+    
+  }
+
+.circles div:nth-child(2) {
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+
+.circles div:nth-child(3) {
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
+
+.circles div:nth-child(4) {
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+.circles div:nth-child(5) {
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+
+.circles div:nth-child(6) {
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+
+.circles div:nth-child(7) {
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
+
+.circles div:nth-child(8) {
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay:15s;
+    animation-duration: 45s;
+}
+
+.circles div:nth-child(9) {
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
+
+.circles div:nth-child(10) {
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 11s;
+ } 
+
+ 
